# SeedCollection

./: main.py  pyproject.toml  requiremets.txt
conf/: config.py
database/: connect_db.py  models.py
migrations/: env.py
migrations/versions/: 6ca97bce1101_user_update.py  78609a0def31_m2m_table.py  90279c3a5f95_init.py  918fea6f286f_m2m_table3.py
repository/: seed_collection.py  seeds.py  users.py
routes/: auth.py  seed_collection.py  seeds.py
schemas/: schemas.py
services/: auth.py  email.py
