[tool.poetry]
name = "seed collection"
version = "0.1.0"
description = ""
authors = ["author"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.0.4"
fastapi-mail = "^1.4.1"
fastapi-sso = "^0.15.0"
fastapi-limiter = "^0.1.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
